salesforce-main/src/main/default/objects/DFSS_Permissions__c/DFSS_Permissions__c.object-meta.xml
<CustomObject>
    <description>DreamFactory SnapShot Permissions Management</description>
    <label>SnapShot Permissions</label>
    <nameField>
        <label>Snapshot Permissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapShot Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>