salesforce-main/src/main/default/objects/DFSS_Permissions__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>Main field for Permissions data</description>
    <label>Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>