salesforce-main/src/main/default/objects/DFSS_Permissions__c/fields/Extra_Field__c.field-meta.xml
<CustomField>
    <fullName>Extra_Field__c</fullName>
    <label>Extra Field</label>
    <type>TextArea</type>
</CustomField>