salesforce-main/src/main/default/objects/DFSS_Permissions__c/fields/Over__c.field-meta.xml
<CustomField>
    <fullName>Over__c</fullName>
    <description>Overflow field for Permissions data</description>
    <label>Over</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>