salesforce-main/src/main/default/objects/DFSS_Permissions__c/fields/User_Link__c.field-meta.xml
<CustomField>
    <fullName>User_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User to whom these permissions are applied</description>
    <inlineHelpText>User to whom these permissions are applied</inlineHelpText>
    <label>User Link</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SnapShot_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>